# cad_toolkit

./: .gitignore  cli.py  main.py  pyproject.toml  requirements.txt
core/: executor.py  logger.py  registry_loader.py
macros/: batch_rename.py  bom_export.py  layer_audit.py  rgco_comparison.py  standards_check.py
outputs/: BOM_ENGINE_BLOCK_v3_20260506_115013.xlsx  BOM_ENGINE_BLOCK_v3_20260506_115018.xlsx  BOM_ENGINE_BLOCK_v3_20260507_114010.xlsx  BOM_ENGINE_BLOCK_v3_20260507_114049.xlsx  BOM_ENGINE_BLOCK_v3_20260507_114224.xlsx  BOM_ENGINE_BLOCK_v3_20260507_114240.xlsx  BOM_ENGINE_BLOCK_v3_20260507_114322.xlsx  BOM_ENGINE_BLOCK_v3_20260507_114325.xlsx  BOM_ENGINE_BLOCK_v3_20260507_114359.xlsx  BOM_ENGINE_BLOCK_v3_20260511_171928.xlsx  BOM_ENGINE_BLOCK_v3_20260511_221208.xlsx  BOM_GEARBOX_ASSY_20260506_115018.xlsx  BOM_GEARBOX_ASSY_20260511_171928.xlsx  BOM_GEARBOX_ASSY_20260511_221208.xlsx  BatchRename_Automation_20260506_115018.txt  BatchRename_Automation_20260507_114359.txt  LayerAudit_DRW-ENGINE-001_20260511_171928.txt  RGCO_PN-001_RevA_vs_RevB_20260506_115018.txt  RGCO_PN-001_RevA_vs_RevB_20260511_171928.txt  RGCO_PN-001_RevA_vs_RevB_20260511_221208.txt  RGCO_PN-001_RevB_vs_RevC_20260506_115013.txt  RGCO_PN-001_RevB_vs_RevC_20260506_115018.txt  RGCO_PN-001_RevB_vs_RevC_20260507_114049.txt  RGCO_PN-001_RevB_vs_RevC_20260507_114240.txt  RGCO_PN-001_RevB_vs_RevC_20260507_114322.txt  RGCO_PN-001_RevB_vs_RevC_20260507_114325.txt  RGCO_PN-001_RevB_vs_RevC_20260507_114359.txt  RGCO_PN-001_RevB_vs_RevC_20260511_171928.txt  RGCO_PN-001_RevB_vs_RevC_20260511_221208.txt  (+5 more)
(+5 files in other folders)
