[project]
name = "cad-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "loguru==0.7.2",
    "openpyxl==3.1.2",
    "pydantic==2.7.1",
    "pytest==8.2.0",
    "rich==13.7.1",
    "typer==0.12.3",
    "uvicorn",
]
